Fix cards overflowing gallery

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,7 +128,6 @@ footer {
 #event-container {
   background-color: lightgray;
   padding: 2% 3%;
-  height: 75vh;
 }
 
 legend{ 
